@startuml class-diagram
skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam packageFontSize 13
hide empty methods


class Product {
    +id: Integer (PK)
    +name: String
    +size: String
    +brand: String
    +info: String
    +category: String
    +price: Float
    +description: String
    +image: Text
}

class Order {
    +id: Integer (PK)
    +customer_name: String
}

class ProductOrder {
    +product_id: Integer (FK)
    +order_id: Integer (FK)
    +quantity: Integer
}


Product      "1" --* "0..*" ProductOrder : order_associations
Order        "1" --* "0..*" ProductOrder : product_associations
@enduml
